# -LLM

./: README.md  ai_poet.py  chatPDF.py  day01_1.py  day01_2.py  day01_3.py  day01_4.py  day01_5.py  day01_6.py  day01_7.py  day01_8.py  day02_1.py  day02_2.py  day02_3.py  gpt_functions.py  image_quiz_eng.json  m04_day05.ipynb  m04_day05_quizmodel.py  m04_day05_quizmodel2.py  m04_day06.ipynb  m04_day06_timezone.py  m04_day07.ipynb  m04_day07_st.py  m04_day08_langchain_basic.py  m04_day08_lcel.ipynb  m04_day08_promptTemplate.ipynb  m04_day09_runnable.ipynb  prompt_template.py  pyproject.toml  review_result_1.txt  review_result_2.txt  sequential_chain.py
